--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Carroussel</title>
 </head>
 <body>
-    
+     <h1>Projet ManipDOM</h1>
     <section>
     </section>
     <div id="div"> </div>
+    
+  <ul>
+    <li><a href="courses.html">🛒 Liste de courses</a></li>
+    <li><a href="score.html">🎮 Score Keeper</a></li>
+  </ul>
     <script src="./carroussel.js"></script>
 </body>
 </html>
